--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -1,9 +1,9 @@
 {
   "profiles": {
-	"start-all-mods-in-sln": {
+    "start-all-mods-in-sln": {
       "commandName": "Executable",
       "executablePath": "$(VINTAGE_STORY)/Vintagestory.exe",
-      "commandLineArgs": "--addModPath=\"$(SolutionDir)bin\" "
+      "commandLineArgs": "--addModPath=\"$(SolutionDir)bin\" --tracelog"
     }
   }
 }
