--- a/ProspectorInfo.csproj
+++ b/ProspectorInfo.csproj
@@ -8,7 +8,7 @@
     <ExcludeFiles Condition="'$(Configuration)'=='Debug'">**/VintagestoryAPI.*;**/VSCreativeMod.*;**/VSEssentials.*;**/VSSurvivalMod.*;**/Foundation.*</ExcludeFiles>
     <BinaryDir Condition="'$(Configuration)'=='Release'">$(SolutionDir)/release/$(AssemblyName)</BinaryDir>
     <ExcludeFiles Condition="'$(Configuration)'=='Release'">**/VintagestoryAPI.*;**/VSCreativeMod.*;**/VSEssentials.*;**/VSSurvivalMod.*;**/*.pdb;**/Foundation.*</ExcludeFiles>
-    <Version>3.1.1</Version>
+    <Version>3.2.0</Version>
   </PropertyGroup>
   
   <ItemGroup>
@@ -43,6 +43,7 @@
 
   <ItemGroup>
     <Folder Include="assets\" />
+    <Folder Include="bin" />
   </ItemGroup>
 
   <ItemGroup>
