--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,16 +15,64 @@ jobs:
       with:
         fetch-depth: 0
 
-    # Add  MSBuild to the PATH: https://github.com/microsoft/setup-msbuild
+    - name: Checkout VSApi
+      uses: actions/checkout@v3
+      with:
+        repository: anegostudios/vsapi
+        path: vsapi
+        fetch-depth: 0
+
+    - name: Checkout VSSurvivalMod
+      uses: actions/checkout@v3
+      with:
+        repository: anegostudios/vssurvivalmod
+        path: vssurvivalmod
+        fetch-depth: 0
+    
+    - name: Checkout VSCreativeMod
+      uses: actions/checkout@v3
+      with:
+        repository: anegostudios/vscreativemod
+        path: vscreativemod
+        fetch-depth: 0
+    
+    - name: Checkout VSEssentialsMod
+      uses: actions/checkout@v3
+      with:
+        repository: anegostudios/vsessentialsmod
+        path: vsessentialsmod
+        fetch-depth: 0
+
     - name: Setup MSBuild
       uses: microsoft/setup-msbuild@v1.0.2
 
-    - name: Restore
+    - name: Restore Dependencies
+      run: |
+        msbuild vsapi/VintagestoryAPI.csproj /t:Restore
+        msbuild vssurvivalmod/VSSurvivalMod.csproj /t:Restore
+        msbuild vscreativemod/VSCreativeMod.csproj /t:Restore
+        msbuild vsessentialsmod/VSEssentialsMod.csproj /t:Restore
+
+    - name: Build Dependencies
+      run: |
+        msbuild vsapi/VintagestoryAPI.csproj /t:Build
+        msbuild vssurvivalmod/VSSurvivalMod.csproj /t:Build
+        msbuild vscreativemod/VSCreativeMod.csproj /t:Build
+        msbuild vsessentialsmod/VSEssentialsMod.csproj /t:Restore
+
+    - name: Restore Mod
       run: msbuild /t:Restore /p:Configuration=Release
-    - name: Build
+
+    - name: Build Mod
       run: msbuild /t:Build /p:Configuration=Release
+      shell: pwsh
+
     - name: Upload build artifacts
       uses: actions/upload-artifact@v3
       with:
         name: Mod
         path: .
+
+    - name: Setup tmate session
+      if: ${{ failure() }}
+      uses: mxschmitt/action-tmate@v3
