--- a/ProspectorInfo.csproj
+++ b/ProspectorInfo.csproj
@@ -31,7 +31,7 @@
       <HintPath>$(VINTAGE_STORY)\Lib\Newtonsoft.Json.dll</HintPath>
       <Private>False</Private>
     </Reference>
-    <Reference Include="Harmony">
+    <Reference Include="0Harmony">
       <HintPath>$(VINTAGE_STORY)\Lib\0Harmony.dll</HintPath>
       <Private>False</Private>
     </Reference>
